Pagination works. Style needs to be improved. Data need to be fetched on demand.